--- a/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
+++ b/01_Getting_&_Knowing_Your_Data/Chipotle/Exercises.ipynb
@@ -861,7 +861,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('cjoy_recsys')",
+   "display_name": "Python 3.8.13 ('oymallai')",
    "language": "python",
    "name": "python3"
   },
