--- a/01_Getting_&_Knowing_Your_Data/World Food Facts/Exercises.ipynb
+++ b/01_Getting_&_Knowing_Your_Data/World Food Facts/Exercises.ipynb
@@ -75,13 +75,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n0/m_r5tjmx09x8fv5c9xg4dlzm0000gn/T/ipykernel_58523/3968951458.py:1: DtypeWarning: Columns (0,3,5,19,20,24,25,26,27,28,36,37,38,39,48) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  food = pd.read_csv('./en.openfoodfacts.org.products.tsv', sep='\\t')\n"
+      "/var/folders/n0/m_r5tjmx09x8fv5c9xg4dlzm0000gn/T/ipykernel_58505/553171278.py:1: DtypeWarning: Columns (0,3,5,19,20,24,25,26,27,28,36,37,38,39,48) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  food = pd.read_csv('../../../data/en.openfoodfacts.org.products.tsv', sep='\\t')\n"
      ]
     }
    ],
    "source": [
-    "food = pd.read_csv('./en.openfoodfacts.org.products.tsv', sep='\\t')"
+    "food = pd.read_csv('../../../data/en.openfoodfacts.org.products.tsv', sep='\\t')"
    ]
   },
   {
@@ -350,15 +350,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(356027, 163)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,15 +386,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "163"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.shape[1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -396,15 +422,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['code', 'url', 'creator', 'created_t', 'created_datetime',\n",
+       "       'last_modified_t', 'last_modified_datetime', 'product_name',\n",
+       "       'generic_name', 'quantity',\n",
+       "       ...\n",
+       "       'fruits-vegetables-nuts_100g', 'fruits-vegetables-nuts-estimate_100g',\n",
+       "       'collagen-meat-protein-ratio_100g', 'cocoa_100g', 'chlorophyl_100g',\n",
+       "       'carbon-footprint_100g', 'nutrition-score-fr_100g',\n",
+       "       'nutrition-score-uk_100g', 'glycemic-index_100g',\n",
+       "       'water-hardness_100g'],\n",
+       "      dtype='object', length=163)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.columns"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,15 +467,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-glucose_100g'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.columns[104]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -447,15 +508,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.dtypes['-glucose_100g']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -470,15 +544,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=356027, step=1)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.index"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -493,15 +580,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Lotus Organic Brown Jasmine Rice'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food.values[18][7]"
+   ]
   }
  ],
  "metadata": {
